--- a/research/index.html
+++ b/research/index.html
@@ -11,7 +11,6 @@
     gtag('js', new Date());
     gtag('config', 'G-R5FPWGD7WK');
   </script>
-  <script async defer data-website-id="a7e9350f-c23f-4121-96a1-2acd478a356d" src="https://siteperso-umami.herokuapp.com/umami.js"></script>
 	
 	<title>Charles Rocabert | Research</title>
 	
@@ -22,9 +21,37 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-  
+  <link rel="stylesheet" href="css/bootstrap-4.2.1.min.css">
+  <link rel="stylesheet" href="../css/bootstrap-4.2.1.min.css">
+  <link rel="stylesheet" href="../../css/bootstrap-4.2.1.min.css">
+	<link rel="stylesheet" href="css/fontawesome-5.6.3.min.css">
+  <link rel="stylesheet" href="../css/fontawesome-5.6.3.min.css">
+  <link rel="stylesheet" href="../../css/fontawesome-5.6.3.min.css">
+
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
+
+  
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
+
+  
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"
+      onload="renderMathInElement(document.body);"></script>
+  <script>
+  document.addEventListener("DOMContentLoaded", function()
+  {
+    renderMathInElement(document.body,
+    {
+      delimiters: [
+        {left: "$$", right: "$$", display: true},
+        {left: "$", right: "$", display: false}
+      ]
+    });
+  });
+  </script>
+
 	<style>
 	html {
 		font-size: 1rem;
@@ -129,6 +156,9 @@
         <a href="https://www.linkedin.com/in/charles-rocabert/" target="_blank" class="text-dark"><i class="fab fa-linkedin-in fa-2x"></i></a>&nbsp;&nbsp;
       </li>
       <li class="nav-item" style="margin-right:10px;">
+        <a href="https://twitter.com/CharlesRocabert" target="_blank" class="text-dark"><i class="fab fa-twitter fa-2x"></i></a>&nbsp;&nbsp;
+      </li>
+      <li class="nav-item" style="margin-right:10px;">
         <a href="mailto:charles[dot]rocabert[at]helsinki[dot]fi" target="_blank" class="text-dark"><i class="fas fa-envelope fa-2x"></i></a>
       </li>
     </ul>
@@ -159,10 +189,10 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Deciphering the genetic architecture of polygenic adaptation in <em>Tribolium castaneum</em></h5>
-                <p class="card-text text-justify font-weight-light">Most adaptation processes have a polygenic genetic basis. Characterizing the dynamics of polygenic adaptation in evolving populations and their underlying genetic architecture is difficult, and requires the development of new experimental approaches and statistical methods. In particular, the detection of genetic markers associated to polygenic traits is challenging, as weak but meaningful associations are often under the barrier of statistical detection, in addition to linkage desequilibrium and other known biases (<a href="https://doi.org/10.1146/annurev-genom-083115-022316" target="_blank">Sella & Barton, 2019</a>).</p>
-                <p class="card-text text-justify font-weight-light">In this context, experimental evolution is a promising tool. By creating the conditions of polygenic adaptation in a controlled environment, this approach allows to characterize the adaptive dynamics at all the levels of the genotype-to-phenotype map (DNA and RNA sequencing, gene expression, phenotype, fitness) at an individual resolution.</p>
-                <p class="card-text text-justify font-weight-light">During this project, I will use the data collected during an experimental evolution with <em>Tribolium castaneum</em> (see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of polygenic adaptation. Combined with numerical simulations and the development of new detection methodologies, the objectives of this project is to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of polygenic adaptation.</p>
-                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Frédéric Guillaume, Eva Koch, Pierre Nouhaud.</p>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">M</span>any adaptation processes have a polygenic genetic basis. Characterizing the dynamics of polygenic adaptation in evolving populations and their underlying genetic architecture is difficult, and requires the development of new experimental approaches and statistical methods. In particular, the detection of genetic markers associated to polygenic traits is challenging, as weak but meaningful associations are often under the barrier of statistical detection, in addition to linkage desequilibrium and other known biases (<a href="https://doi.org/10.1146/annurev-genom-083115-022316" target="_blank">Sella & Barton, 2019</a>).</p>
+                <p class="card-text text-justify font-weight-light">In this context, experimental evolution is a promising tool. By creating the conditions of polygenic adaptation in a controlled environment, this approach allows to characterize the adaptive dynamics at all the levels of the genotype-to-phenotype map, at the resolution of individuals.</p>
+                <p class="card-text text-justify font-weight-light">During this project, I will use the data collected during an experimental evolution with <em>Tribolium castaneum</em> (the red floor beetle, see <em>e.g.</em> <a href="https://doi.org/10.1371/journal.pgen.1008768" target="_blank">Koch & Guillaume, 2020</a>) to decipher the genetic architecture of polygenic adaptation. The objective of this project is to better understand the adaptation of populations to environmental change, as well as offering new methods to detect genetic markers of polygenic adaptation.</p>
+                <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Frédéric Guillaume, Eva L. Koch.</p>
               </div>
             </div>
           </div>
@@ -179,6 +209,7 @@
               <img src="../img/project2.png" alt="Project 2" width=200px class="img-fluid">
               <br /><br />
               <div class="btn-group-vertical btn-block" role="group" aria-label="Button group with nested dropdown">
+              <a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fas fa-pen-nib"></i> Pre-print (BioRXiv, 2022)</a>
               <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-github"></i> MetEvolSim repository</a>
               <a href="https://pypi.org/project/MetEvolSim/" target="_blank" type="button" class="text-left btn btn-outline-info"><i class="fab fa-python"></i> Pypi package</a>
               </div>
@@ -188,8 +219,8 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Modeling the principles behind metabolome conservation in mammals</h5>
-                <p class="card-text text-justify font-weight-light">Traditionally, metabolic evolution has been primarily studied by comparing enzyme content and pathway structure across species. Recent progress in metabolomics technology allows the systematic quantification of metabolite concentrations, the metabolome, offering a new perspective to interrogate the evolution of metabolic systems.</p>
-                <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a simulation framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. MetEvolSim takes as an input any SBML metabolic network model, as soon as the kinetic model is fully specified, and a stable steady-state exists. Steady-state concentrations are computed thanks to Copasi software. Using this model, I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution <strong>(one manuscript in preparation)</strong>.</p>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">T</span>raditionally, metabolic evolution has been primarily studied by comparing enzyme content and pathway structure across species. Recent progress in metabolomics technology allows the systematic quantification of metabolite concentrations, the metabolome, offering a new perspective to interrogate the evolution of metabolic systems.</p>
+                <p class="card-text text-justify font-weight-light">Within this interdisciplinary project, I explored the evolving properties of kinetic models of mammalian metabolism using computer simulations. I developed <a href="https://github.com/charlesrocabert/MetEvolSim" target="_blank">MetEvolSim</a> (Metabolome Evolution Simulator), a simulation framework publicly available as a user friendly <a href="https://pypi.org/project/MetEvolSim/" target="_blank">Python package</a>. MetEvolSim takes as an input any SBML metabolic network model, as soon as the kinetic model is fully specified, and a stable steady-state exists. Steady-state concentrations are computed thanks to Copasi software. Using this model, I have shown that abundant metabolites are more coupled to fitness, and are therefore more conserved through evolution <strong>(<a href="https://www.biorxiv.org/content/10.1101/2022.08.15.503737v1" target="_blank">one pre-print in BioRXiv</a>)</strong>.</p>
                 <p class="card-text text-justify font-weight-light">Collaborators (by alphabetical order): Gábor Boross, Orsolya Liska, Balázs Papp.</p>
               </div>
             </div>
@@ -219,7 +250,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Impact of an evolvable phenotypic noise on the adaptation rate of complex organisms</h5>
-                <p class="card-text text-justify font-weight-light">How does an evolvable phenotypic noise (the variability of isogenic populations in constant environment) impact the probability to fix beneficial mutations? How do the shape of the fitness landscape and the complexity of the phenotype relate to this mechanism? I asked these questions in <a href="https://doi.org/10.1111/evo.14083" target="_blank">this publication</a>, where I show that phenotypic noise promotes the fixation of beneficial mutations on plateauing regions of the fitness landscape, and compensates for the cost of complexity. In particular, I show that the Gaussian fitness function classicaly used in quantitative genetics is a non-generic case regarding the effect of phenotypic noise on the gradient of selection, suggesting that other forms of fitness function (even close to a Gaussian shape) are preferable for who wants to study phenotypic noise.</p>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">H</span>ow does an evolvable phenotypic noise (the variability of isogenic populations in constant environment) impact the probability to fix beneficial mutations? How do the shape of the fitness landscape and the complexity of the phenotype relate to this mechanism? I asked these questions in <a href="https://doi.org/10.1111/evo.14083" target="_blank">this publication</a>, where I show that phenotypic noise promotes the fixation of beneficial mutations on plateauing regions of the fitness landscape, and compensates for the cost of complexity. In particular, I show that the Gaussian fitness function classicaly used in quantitative genetics is a non-generic case regarding the effect of phenotypic noise on the gradient of selection, suggesting that other forms of fitness function (even close to a Gaussian shape) are preferable for who wants to study phenotypic noise.</p>
                 <p class="card-text text-justify font-weight-light">These results raise many questions, <em>e.g.</em> in predictive evolution. I am always happy to <a href="mailto:charles[dot]rocabert[at]helsinki[dot]fi" target="_blank">discuss and share ideas</a> on this topic.</p>
                 <p class="card-text text-justify font-weight-light">For a shorter take-home message, check out this <a data-toggle="collapse" href="#collapse" aria-expanded="false" aria-controls="collapse">drawing</a> by P. Biller.</p>
                 <div class="collapse" id="collapse">
@@ -250,7 +281,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Integrating road network topology for modeling human-mediated dispersal in terrestrial landscapes</h5>
-                <p class="card-text text-justify font-weight-light">Biological invasions are a major threat for biodiversity and human societies. Human-mediated dispersal (HMD) is responsible for transporting invasive species spread through landscapes. Existing models do not account for the topology of the road network, despite its important role in spatially constraining human travels.</p>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">B</span>iological invasions are a major threat for biodiversity and human societies. Human-mediated dispersal (HMD) is responsible for transporting invasive species spread through landscapes. Existing models do not account for the topology of the road network, despite its important role in spatially constraining human travels.</p>
 
                 <p class="card-text text-justify font-weight-light">In collaboration with Jérôme M.W. Gippet and Serge Fenet, I developed <a href="https://github.com/charlesrocabert/MoRIS" target="_blank">MoRIS</a> (Model of Routes of Invasive Spread), a spatially explicit and mechanistic stochastic jump model to simulate HMD in terrestrial landscapes. Our modeling approach allows to easily account for the influence of the road network topology on the direction of human travels. By coupling the model to a data-based optimization algorithm (CMA-ES), we have shown that integrating the topology of the road network strongly improve our ability to explain the current distribution of the invasive ant <em>Lasius neglectus</em> in the middle Rhône valley, France <strong>(one manuscript in preparation)</strong>.</p>
 
@@ -287,7 +318,7 @@
             <div class="col-md-8">
               <div class="card-body">
                 <h5 class="card-title"><i class="fas fa-caret-down"></i> Modeling the evolution of bacterial micro-organisms with numerical simulations</h5>
-                <p class="card-text text-justify font-weight-light">Evolution is the major source of complexity on Earth, at the origin of all the species we can observe, interact with or breed. On a smaller scale, evolution is at the heart of the adaptation process for many species, in particular micro-organisms (<em>e.g.</em> bacteria, viruses...). These organisms are not only organized by evolution, they are also organized to evolve (<em>i.e.</em> "<a href="https://evoevo.liris.cnrs.fr/what-is-evoevo/" target="_blank">evolution evolves</a>").</p>
+                <p class="card-text text-justify font-weight-light"><span class="dropcap">E</span>volution is the major source of complexity on Earth, at the origin of all the species we can observe, interact with or breed. On a smaller scale, evolution is at the heart of the adaptation process for many species, in particular micro-organisms (<em>e.g.</em> bacteria, viruses...). These organisms are not only organized by evolution, they are also organized to evolve (<em>i.e.</em> "<a href="https://evoevo.liris.cnrs.fr/what-is-evoevo/" target="_blank">evolution evolves</a>").</p>
 
                 <p class="card-text text-justify font-weight-light">During my PhD, I joined the <a href="https://evoevo.liris.cnrs.fr/" target="_blank">EvoEvo European project</a> to create an integrated computational model of evolution. I developed <a href="https://github.com/charlesrocabert/Evo2Sim" target="_blank">Evo<sup>2</sup>Sim</a> (Evolution of Evolution Simulator), a multi-scale evolutionary model which takes into account the (ultra-fast) dynamics of metabolic networks, the (fast) dynamics of gene regulatory networks, the (medium to slow) dynamics of resources in the ecosystem and the (slow) evolutionary dynamics of genes and genome structure. Evo<sup>2</sup>Sim is designed to perform <em>in silico</em> experimental evolution experiments, that mimick real experimental evolution protocols. A detailed description of the model and its background can be found in my <a href="https://github.com/charlesrocabert/Thesis/blob/master/phd_manuscript.pdf
     " target="_blank">PhD manuscript</a>.</p>
@@ -308,7 +339,7 @@
 
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020-2022 Charles Rocabert. All rights reserved. Powered by Hugo and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2022 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
