--- a/cv/index.html
+++ b/cv/index.html
@@ -138,10 +138,6 @@
         <a class="nav-link" href="/cv/">CV</a>
       </li>
       
-      <li class="nav-item ">
-        <a class="nav-link" href="/blog/">Blog</a>
-      </li>
-      
     </ul>
   </div>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -174,15 +170,32 @@
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Experience and Education</font></h5>
 
-    <!-- Postdoc 3 -->
+    <!-- Postdoc 4 -->
     <div class="row justify-content-center mt-4">
       <div class="col-lg-11">
         <div class="shadow-sm card border border-primary">
           <div class="row no-gutters">
             <div class="col-md-11 p-4">
+              <strong>Research associate</strong>, Heinrich Heine University Düsseldorf (Düsseldorf, Germany)
+              <br/>
+              <span class="text-muted"><font style="font-variant: small-caps">Jan. 2023 - Present</font></span>
+              <br/><br/>
+              <strong>Lab:</strong> <a href="https://www.math-nat-fak.hhu.de/en/" target="_blank">Faculty of Mathematics and Natural Sciences</a>, Prof. Martin Lercher's <a href="https://www.cs.hhu.de/en/research-groups/computational-cell-biology" target="_blank">Computational Cell Biology group</a>.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Postdoc 3 -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card border border-muted">
+          <div class="row no-gutters">
+            <div class="col-md-11 p-4">
               <strong>Postdoctoral research fellow</strong>, University of Helsinki (Helsinki, Finland)
               <br/>
-              <span class="text-muted"><font style="font-variant: small-caps">Sept. 2021 - Present</font></span>
+              <span class="text-muted"><font style="font-variant: small-caps">Sept. 2021 - Dec. 2022</font></span>
               <br/><br/>
               <strong>Lab:</strong> <a href="https://www2.helsinki.fi/en/faculty-of-biological-and-environmental-sciences/research/organismal-and-evolutionary-biology" target="_blank">Organismal and Evolutionary Biology Research Program (OEB), Prof. Frédéric Guillaume's group</a>.<br/>
               <strong>Training:</strong><br/>
@@ -291,7 +304,24 @@
     <br/><hr>
     <h5 class="text-dark"><i class="fas fa-caret-down"></i> <font style="font-variant: small-caps">Teaching experience</font></h5>
 
-    <!-- Helsinki 2021 -->
+    <!-- Düsseldorf 2023 -->
+    <div class="row justify-content-center mt-4">
+      <div class="col-lg-11">
+        <div class="shadow-sm card">
+          <div class="row no-gutters">
+            <div class="col-md-11 p-4">
+              <strong>Teaching assistant, undergraduate department</strong>, Heinrich Heine Düsseldorf Universität (Düsseldorf, Germany)
+              <br/>
+              <span class="text-muted"><font style="font-variant: small-caps">2023</font></span>
+              <br/><br/>
+              • Introduction to the modelling of metabolic networks.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Helsinki 2021-2022 -->
     <div class="row justify-content-center mt-4">
       <div class="col-lg-11">
         <div class="shadow-sm card">
@@ -406,7 +436,7 @@
 
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020-2022 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2023 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
