--- a/index.html
+++ b/index.html
@@ -139,10 +139,6 @@
         <a class="nav-link" href="/cv/">CV</a>
       </li>
       
-      <li class="nav-item ">
-        <a class="nav-link" href="/blog/">Blog</a>
-      </li>
-      
     </ul>
   </div>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -172,7 +168,7 @@
 
   <div class="col-md-4 text-center">
     <br/>
-    <img class="shadow-sm" src="img/portrait.png" alt="Portrait" width=250px>
+    <img class="rounded" src="img/portrait.png" alt="Portrait" width=250px>
     <br/><br/>
     <a type="button" class="btn btn-outline-info btn-block" href="/cv/">Resume/CV</a>
     <br/>
@@ -181,7 +177,7 @@
   <div class="col-md-8 text-justify">
     <h4 class="text-secondary font-weight-light">ABOUT ME</h4>
     <p class="font-weight-light">
-      <span class="dropcap">I</span> am an evolutionary biologist, who uses computers and mathematics to explore the evolution of complex biological systems. I am studying how adaptation and long-term selection shape genotypes, phenotypes and populations in variable environments, with their share of surprising and counter-intuitive effects.
+      <span class="dropcap">I</span> am an evolutionary biologist, who uses computers and mathematics to explore the evolution of complex biological systems. I am studying how adaptation and second-order selection shape genotypes, phenotypes and populations in variable environments, with their share of surprising and counter-intuitive effects.
     </p>
     <p class="font-weight-light">
       I am using a broad range of approaches, from mathematical modeling to individual-based simulations, bioinformatics and machine learning.
@@ -189,7 +185,8 @@
       Depending on their complexity, I usually consider simulation models as experimental systems (<a href="https://doi.org/10.1016/j.tree.2004.07.019" target="_blank">Peck, 2004</a>) &mdash; I conduct <em>in silico</em> evolution experiments in a computer as one would do in the real world (<a href="https://doi.org/10.1038/nrmicro2750" target="_blank">Hindré et al., 2012</a>).
     </p>
     <p class="font-weight-light">
-      Since September 2021, I am a postdoctoral researcher at the <a href="https://www2.helsinki.fi/en/faculty-of-biological-and-environmental-sciences/research/organismal-and-evolutionary-biology" target="_blank">University of Helsinki (Organismal and Evolutionary Biology Research Program)</a>, in Prof. Frédéric Guillaume's group. Before that, I joined the <a href="http://group.szbk.u-szeged.hu/sysbiol/papp-balazs-lab-index.html" target="_blank">Balázs Papp laboratory</a> (Hungary) from May, 2018 to August 2021 and also <a href="https://team.inria.fr/beagle/" target="_blank">INRIA</a> (France) from May, 2019 to August, 2020 as a postdoctoral fellow. I defended my PhD in November, 2017 at <a href="https://www.insa-lyon.fr/en/" target="_blank">INSA de Lyon</a> (France), within the project-team <a href="https://team.inria.fr/beagle/" target="_blank">INRIA-Beagle</a>.
+      Since January 2023, I am a research associate at the <a href="https://www.math-nat-fak.hhu.de/en/" target="_blank">Heinrich Heine University of Düsseldorf (Mathematics and Natural Sciences faculty)</a>, in Prof. Martin Lercher's <a href="https://www.cs.hhu.de/en/research-groups/computational-cell-biology" target="_blank">Computational Cell Biology group</a>.
+      Before that, I have been a research associate at the <a href="https://www2.helsinki.fi/en/faculty-of-biological-and-environmental-sciences/research/organismal-and-evolutionary-biology" target="_blank">University of Helsinki</a>, the <a href="http://group.szbk.u-szeged.hu/sysbiol/papp-balazs-lab-index.html" target="_blank">Hungarian Academy of Sciences</a>, and at <a href="https://team.inria.fr/beagle/" target="_blank">INRIA</a>. I defended my PhD in November, 2017 at <a href="https://www.insa-lyon.fr/en/" target="_blank">INSA de Lyon</a>, within the project-team <a href="https://team.inria.fr/beagle/" target="_blank">INRIA-Beagle</a>.
     </p>
     <p class="font-weight-light">
       Check out the menu to learn more about my <a href="/research/" target="_blank">research activity</a> and my last posts. Discover my publicly available software <a href="/software" target="_blank">here</a> and on <a href="https://github.com/charlesrocabert" target="_blank">GitHub</a>.
@@ -226,7 +223,7 @@
 
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020-2022 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2023 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
