--- a/software/index.html
+++ b/software/index.html
@@ -138,10 +138,6 @@
         <a class="nav-link" href="/cv/">CV</a>
       </li>
       
-      <li class="nav-item ">
-        <a class="nav-link" href="/blog/">Blog</a>
-      </li>
-      
     </ul>
   </div>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
@@ -172,12 +168,31 @@
 
     <h4 class="text-secondary font-weight-light"><img src="../img/piece_of_code.png" alt="Piece of code" width=60px> SOFTWARE</h4>
 
+    <!-- Navbar -->
+    <br/>
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link" href="#metevolsim"><i class="fas fa-caret-down"></i> MetEvolSim</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#moris"><i class="fas fa-caret-down"></i> MoRIS</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#sigmafgm"><i class="fas fa-caret-down"></i> &sigma;FGM</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#evo2sim"><i class="fas fa-caret-down"></i> Evo<sup>2</sup>Sim</a>
+      </li>
+    </ul>
+    <br/>
+
     <!-- MetEvolSim -->
-    <div class="row justify-content-center mt-4">
+    <div class="row justify-content-center mt-4" name="metevolsim">
       <div class="col-lg-11">
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
+              <a name="metevolsim"></a>
               <img src="../img/metevolsim_logo.png" alt="MetEvolSim logo" width=200px class="img-fluid">
               <br/><br />
               <span class="text-muted">A Python package to simulate the long-term evolution of metabolic levels.</span>
@@ -217,6 +232,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
+              <a name="moris"></a>
               <img src="../img/moris_logo.png" alt="MoRIS logo" width=200px class="img-fluid">
               <br/><br />
               <span class="text-muted">A simulator of human-mediated dispersal via transportation networks.</span>
@@ -256,6 +272,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
+              <a name="sigmafgm"></a>
               <img src="../img/sigmaFGM_logo.png" alt="sigmaFGM logo" width=200px class="img-fluid">
               <br/><br />
               <span class="text-muted">Individual-based implementation of Fisher's geometric model with evolvable phenotypic noise.</span>
@@ -293,6 +310,7 @@
         <div class="shadow-sm card border-muted">
           <div class="row no-gutters">
             <div class="col-md-4 p-4 text-center">
+              <a name="evo2sim"></a>
               <img src="../img/evo2sim_logo.png" alt="Evo2Sim logo" width=200px class="img-fluid">
               <br/><br />
               <span class="text-muted">Individual-based and multi-scale evolutionary model, dedicated to <em>in silico</em> experimental evolution.</span>
@@ -335,7 +353,7 @@
 
 <div class="row">
   <div class="col text-center border-top">
-    <small class="text-muted"> &copy; 2020-2022 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
+    <small class="text-muted"> &copy; 2020-2023 Charles Rocabert. All rights reserved. Powered by Hugo, Staticman and Github Pages. Drawings: &copy; Manuela Michel Dikongué.</small>
   </div>
 </div>
 
